# sasl-oauth-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
config/: sasl-xoauth2.conf
scripts/: sasl-xoauth2-tool
src/: client.rs  config.rs  ffi.rs  lib.rs  log.rs  token_store.rs
